Created Home Activity's UI

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, Home!</string>
     <string name="app_name">Wake Up!</string>
+
+    <string name="home_title">Home</string>
+    <string name="home_set_existing_alarm">Set Existing Alarm:</string>
+    <string name="home_existing_alarm_spinner_prompt">Choose An Existing Alarm</string>
+    <string name="home_done">Done</string>
+    <string name="home_create_new_alarm">Create New Alarm</string>
+    <string name="home_manage_existing_alarms">Manage Exising Alarms</string>
+
 </resources>
