Wrote Home Activity with stubs for event handlers.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="home_done">Done</string>
     <string name="home_create_new_alarm">Create New Alarm</string>
     <string name="home_manage_existing_alarms">Manage Exising Alarms</string>
+    <string name="home_no_alarms_exist">No Alarms Exist</string>
 
 </resources>
