--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="edit_alarm_units_spinner_prompt">Pick Unit of Measurement For Proximity Radius</string>
 
     <string name="select_destination_done">Done</string>
+    <string name="select_destination_instructions">Instructions</string>
 
 </resources>
