--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="select_destination_done">Done</string>
     <string name="select_destination_instructions">Instructions</string>
 
+    <string name="manage_alarms_delete_alarm">Delete</string>
+
 </resources>
