--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,4 +29,6 @@
 
     <string name="manage_alarms_delete_alarm">Delete</string>
 
+    <string name="receive_notification_home">Go To Home Screen"</string>
+
 </resources>
