--- a/README
+++ b/README
@@ -17,7 +17,19 @@ know that my work is useful to someone else.
 CONTACT:
 You can contact me via email: gopalkrishnaps@gmail.com / gopalkri@umich.edu
 
-Author:
+CONTRIBUTING:
+If you want to contribute to WakeUp! in any way, I'd be thrilled. Get in touch
+with me before you get started on anything though. Couple of things about this.
+I've tried to follow my own coding standards, which I haven't formally
+defined anywhere. I ask that you conform to my standards to the extent possible.
+Here are a couple of things I would really like some help on: 
+1. Icons. I'm hopeless at creating icons. 
+2. UI Design. I don't have any formal training in UI design. If you have
+suggestions or fixes, I'd love to hear about them.
+3. I'm pretty new to Android, and have never really had my own full fledged
+project. So if you think I'm doing something wrong, please let me know.
+
+AUTHOR:
 Gopalkrishna Sharma (aka Gopal)
 
 Have fun with Wake Up!
