Added home page to README.

--- a/README
+++ b/README
@@ -8,6 +8,8 @@ I wrote this app mostly for my own benefit, but plan on releasing it to the
 Android Market in the near future as a free application. If you have any 
 thoughts, comments, feedback, please let me know via email.
 
+The Wake Up! webpage is at: http://umich.edu/~gopalkri/wakeup.
+
 LICENSING:
 WakeUp! is released under the LGPL. For more information on the LGPL refer to:
 http://www.gnu.org/licenses/lgpl.html. I request that you let me know via email
