--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,19 +5,20 @@ Email: gopalkri@umich.edu / gopalkrishnaps@gmail.com
 
 This file is part of WakeUp!.
 
-Foobar is free software: you can redistribute it and/or modify
+Wake Up! is free software: you can redistribute it and/or modify
 it under the terms of the Lesser GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
-Foobar is distributed in the hope that it will be useful,
+Wake Up! is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 Lesser GNU General Public License for more details.
 
 You should have received a copy of the Lesser GNU General Public License
-along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
+along with Wake Up!.  If not, see <http://www.gnu.org/licenses/>.
 -->
+
 
 <resources>
     <string name="app_name">Wake Up!</string>
@@ -25,7 +26,7 @@ along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
     <string name="home_title">Home</string>
     <string name="home_set_existing_alarm">Set Existing Alarm:</string>
     <string name="home_existing_alarm_spinner_prompt">Choose An Existing Alarm</string>
-    <string name="home_done">Done</string>
+    <string name="home_done">Set</string>
     <string name="home_create_new_alarm">Create New Alarm</string>
     <string name="home_manage_existing_alarms">Manage Exising Alarms</string>
     <string name="home_no_alarms_exist">No Alarms Exist</string>
