--- a/README
+++ b/README
@@ -24,11 +24,12 @@ If you want to contribute to WakeUp! in any way, I'd be thrilled. Get in touch
 with me before you get started on anything though. Couple of things about this.
 I've tried to follow my own coding standards, which I haven't formally
 defined anywhere. I ask that you conform to my standards to the extent possible.
-Here are a couple of things I would really like some help on: 
+Here are a couple of things I would really like some help on (in that order): 
 1. Icons. I'm hopeless at creating icons. 
-2. UI Design. I don't have any formal training in UI design. If you have
+2. Documentation (Javadoc and otherwise). Pretty terrible at this.
+3. UI Design. I don't have any formal training in UI design. If you have
 suggestions or fixes, I'd love to hear about them.
-3. I'm pretty new to Android, and have never really had my own full fledged
+4. I'm pretty new to Android, and have never really had my own full fledged
 project. So if you think I'm doing something wrong, please let me know.
 
 AUTHOR:
