Updated README - Wake Up! now on Android Market!

--- a/README
+++ b/README
@@ -4,8 +4,9 @@ you to set an alarm which is triggered when you approach your destination. This
 way you set an alarm when you get on, go to sleep, and get woken up right on 
 time. 
 
-I wrote this app mostly for my own benefit. I plan on releasing it to the
-Android Market soon as a free application.
+Wake Up! has been published on the Android Market as free application in all
+countries possible. Search for "wake up". It is under the Productivity
+section.
 
 The Wake Up! webpage is at: http://umich.edu/~gopalkri/wakeup.
 
