Relicensed to GPL.

--- a/README
+++ b/README
@@ -21,13 +21,14 @@ REQUESTED FEATURES:
 2. Optimize battery consumption for long journeys.
 
 LICENSING:
-WakeUp! is released under the LGPL. For more information on the LGPL refer to:
-http://www.gnu.org/licenses/lgpl.html. I request that you let me know via email
+WakeUp! is released under the GPL. For more information on the GPL refer to:
+http://www.gnu.org/copyleft/gpl.html. I request that you let me know via email
 if you do use WakeUp! (either source, or as an application). It's always good to
 know that my work is useful to someone else.
 
 CONTACT:
 You can contact me via email: gopalkrishnaps@gmail.com / gopalkri@umich.edu
+Twitter: @gopalkri
 
 CONTRIBUTING:
 If you want to contribute to WakeUp! in any way, I'd be thrilled. Get in touch
